@@ -159,7 +159,7 @@ ConditionCategory:RegisterCondition(13,	 "MELEEHASTE", {
 	percent = true,
 	formatter = TMW.C.Formatter.PLUSPERCENT,
 	min = 0,
-	max = 100,
+	range = 100,
 	unit = PLAYER,
 	icon = "Interface\\Icons\\spell_nature_bloodlust",
 	tcoords = CNDT.COMMON.standardtcoords,
@@ -224,7 +224,7 @@ ConditionCategory:RegisterCondition(23,	 "RANGEDHASTE", {
 	percent = true,
 	formatter = TMW.C.Formatter.PLUSPERCENT,
 	min = 0,
-	max = 100,
+	range = 100,
 	unit = PLAYER,
 	icon = "Interface\\Icons\\ability_hunter_runningshot",
 	tcoords = CNDT.COMMON.standardtcoords,
@@ -315,7 +315,7 @@ ConditionCategory:RegisterCondition(33,	 "SPELLCRIT", {
 ConditionCategory:RegisterCondition(34,	 "SPELLHASTE", {
 	text = L["SPELLHASTE"],
 	min = 0,
-	max = 100,
+	range = 100,
 	percent = true,
 	formatter = TMW.C.Formatter.PLUSPERCENT,
 	unit = PLAYER,
