@@ -5,6 +5,7 @@ TMW.CHANGELOG = {
 [==[===v7.0.2===]==],
 [==[====Bug Fixes====]==],
 [==[* Fixed the missing slider value text for the Unit Level condition.]==],
+[==[* The Haste conditions no longer have a hard cap of 100%.]==],
 [==[]==],
 [==[===v7.0.1===]==],
 [==[* Numbered units entered with a space in the middle (e.g. "arena 1") will once again be corrected by TellMeWhen. It is still bad practice to enter units like that, though.]==],
